--- a/Вступ_до_ІАД_БС_25_Аль_Хмуз_КП_№1.ipynb
+++ b/Вступ_до_ІАД_БС_25_Аль_Хмуз_КП_№1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuZsYFcpjmTYV2ezipZ0kf",
+      "authorship_tag": "ABX9TyPTtRDsc1eS/OT8AYsRs0Sa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,392 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "8TM6Wo4bUnHx"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Функция для расчета метрик\n",
+        "def calculate_distances(matrix):\n",
+        "    # Извлечение точек\n",
+        "    point1 = matrix[0]\n",
+        "    point2 = matrix[1]\n",
+        "\n",
+        "    # Евклидова метрика\n",
+        "    euclidean_squared = np.sum((point1 - point2)**2)  # Квадрат Евклидова расстояния\n",
+        "    euclidean = np.sqrt(euclidean_squared)  # Евклидово расстояние\n",
+        "\n",
+        "    # Чебышева\n",
+        "    chebyshev = np.max(np.abs(point1 - point2))\n",
+        "\n",
+        "    # Миньковского с параметром p=3 (можно изменить для других значений p)\n",
+        "    minkowski_p3 = np.sum(np.abs(point1 - point2)**3)**(1/3)\n",
+        "\n",
+        "    return {\n",
+        "        'Квадрат Евклидова': euclidean_squared,\n",
+        "        'Евклидово': euclidean,\n",
+        "        'Чебышева': chebyshev,\n",
+        "        'Миньковского (p=3)': minkowski_p3\n",
+        "    }\n",
+        "\n",
+        "# Пример данных: строки - точки, столбцы - параметры\n",
+        "matrix = np.array([\n",
+        "    [7.7, 2.8, 6.7, 2],   # Первая точка\n",
+        "    [5.5, 2.3, 4.0, 1.3]  # Вторая точка (пример другой цветок)\n",
+        "])\n",
+        "\n",
+        "# Рассчитаем метрики для всех 4 параметров\n",
+        "distances_4_params = calculate_distances(matrix)\n",
+        "\n",
+        "# Выведем результат\n",
+        "distances_4_params\n"
+      ],
+      "metadata": {
+        "id": "iKTOOT49VqKe",
+        "outputId": "641cc3c9-d17f-484d-9c2e-736c680aa208",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Квадрат Евклидова': 12.870000000000003,\n",
+              " 'Евклидово': 3.58747822293042,\n",
+              " 'Чебышева': 2.7,\n",
+              " 'Миньковского (p=3)': 3.1345764897590516}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Функция для вывода результатов в таблице\n",
+        "def calculate_and_display(matrix, num_params):\n",
+        "    results = []\n",
+        "\n",
+        "    for n in num_params:\n",
+        "        # Обрезаем матрицу до нужного числа параметров (столбцов)\n",
+        "        truncated_matrix = matrix[:, :n]\n",
+        "        distances = calculate_distances(truncated_matrix)\n",
+        "        results.append([distances['Квадрат Евклидова'], distances['Евклидово'], distances['Чебышева'], distances['Миньковского (p=3)']])\n",
+        "\n",
+        "    # Создаем DataFrame для визуализации\n",
+        "    df = pd.DataFrame(results, columns=['Квадрат Евклидова', 'Евклидово', 'Чебышева', 'Миньковского (p=3)'], index=[f'{n} параметра(ов)' for n in num_params])\n",
+        "    return df\n",
+        "\n",
+        "# Рассчитаем метрики для 2, 3 и 4 параметров\n",
+        "num_params = [2, 3, 4]\n",
+        "df_results = calculate_and_display(matrix, num_params)\n",
+        "\n",
+        "# Выведем таблицу\n",
+        "df_results\n"
+      ],
+      "metadata": {
+        "id": "swIQAH6dVtmO",
+        "outputId": "3746d26c-ae5d-41d5-fd92-0bcadee24cd0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                 Квадрат Евклидова  Евклидово  Чебышева  Миньковского (p=3)\n",
+              "2 параметра(ов)               5.09   2.256103       2.2            2.208575\n",
+              "3 параметра(ов)              12.38   3.518522       2.7            3.122897\n",
+              "4 параметра(ов)              12.87   3.587478       2.7            3.134576"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-33792449-abef-4f08-ba49-0e50bba1b681\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Квадрат Евклидова</th>\n",
+              "      <th>Евклидово</th>\n",
+              "      <th>Чебышева</th>\n",
+              "      <th>Миньковского (p=3)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2 параметра(ов)</th>\n",
+              "      <td>5.09</td>\n",
+              "      <td>2.256103</td>\n",
+              "      <td>2.2</td>\n",
+              "      <td>2.208575</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3 параметра(ов)</th>\n",
+              "      <td>12.38</td>\n",
+              "      <td>3.518522</td>\n",
+              "      <td>2.7</td>\n",
+              "      <td>3.122897</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4 параметра(ов)</th>\n",
+              "      <td>12.87</td>\n",
+              "      <td>3.587478</td>\n",
+              "      <td>2.7</td>\n",
+              "      <td>3.134576</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-33792449-abef-4f08-ba49-0e50bba1b681')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-33792449-abef-4f08-ba49-0e50bba1b681 button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-33792449-abef-4f08-ba49-0e50bba1b681');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "<div id=\"df-87fe52bc-4a3a-42ee-85ce-de884973742a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-87fe52bc-4a3a-42ee-85ce-de884973742a')\"\n",
+              "            title=\"Suggest charts\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "  </button>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "      --bg-color: #E8F0FE;\n",
+              "      --fill-color: #1967D2;\n",
+              "      --hover-bg-color: #E2EBFA;\n",
+              "      --hover-fill-color: #174EA6;\n",
+              "      --disabled-fill-color: #AAA;\n",
+              "      --disabled-bg-color: #DDD;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "      --bg-color: #3B4455;\n",
+              "      --fill-color: #D2E3FC;\n",
+              "      --hover-bg-color: #434B5C;\n",
+              "      --hover-fill-color: #FFFFFF;\n",
+              "      --disabled-bg-color: #3B4455;\n",
+              "      --disabled-fill-color: #666;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: var(--bg-color);\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: var(--fill-color);\n",
+              "    height: 32px;\n",
+              "    padding: 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: var(--hover-bg-color);\n",
+              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: var(--button-hover-fill-color);\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart-complete:disabled,\n",
+              "  .colab-df-quickchart-complete:disabled:hover {\n",
+              "    background-color: var(--disabled-bg-color);\n",
+              "    fill: var(--disabled-fill-color);\n",
+              "    box-shadow: none;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-spinner {\n",
+              "    border: 2px solid var(--fill-color);\n",
+              "    border-color: transparent;\n",
+              "    border-bottom-color: var(--fill-color);\n",
+              "    animation:\n",
+              "      spin 1s steps(1) infinite;\n",
+              "  }\n",
+              "\n",
+              "  @keyframes spin {\n",
+              "    0% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "      border-left-color: var(--fill-color);\n",
+              "    }\n",
+              "    20% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    30% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    40% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    60% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    80% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "    90% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "  <script>\n",
+              "    async function quickchart(key) {\n",
+              "      const quickchartButtonEl =\n",
+              "        document.querySelector('#' + key + ' button');\n",
+              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "      try {\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      } catch (error) {\n",
+              "        console.error('Error during call to suggestCharts:', error);\n",
+              "      }\n",
+              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "    }\n",
+              "    (() => {\n",
+              "      let quickchartButtonEl =\n",
+              "        document.querySelector('#df-87fe52bc-4a3a-42ee-85ce-de884973742a button');\n",
+              "      quickchartButtonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "    })();\n",
+              "  </script>\n",
+              "</div>\n",
+              "    </div>\n",
+              "  </div>\n"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "df_results",
+              "summary": "{\n  \"name\": \"df_results\",\n  \"rows\": 3,\n  \"fields\": [\n    {\n      \"column\": \"\\u041a\\u0432\\u0430\\u0434\\u0440\\u0430\\u0442 \\u0415\\u0432\\u043a\\u043b\\u0438\\u0434\\u043e\\u0432\\u0430\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 4.357227711898168,\n        \"min\": 5.090000000000001,\n        \"max\": 12.870000000000003,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          5.090000000000001,\n          12.380000000000003,\n          12.870000000000003\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\u0415\\u0432\\u043a\\u043b\\u0438\\u0434\\u043e\\u0432\\u043e\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.7495574839582005,\n        \"min\": 2.2561028345356955,\n        \"max\": 3.58747822293042,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          2.2561028345356955,\n          3.5185224171518366,\n          3.58747822293042\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\u0427\\u0435\\u0431\\u044b\\u0448\\u0435\\u0432\\u0430\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.2886751345948129,\n        \"min\": 2.2,\n        \"max\": 2.7,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          2.7,\n          2.2\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\u041c\\u0438\\u043d\\u044c\\u043a\\u043e\\u0432\\u0441\\u043a\\u043e\\u0433\\u043e (p=3)\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.5312874466205758,\n        \"min\": 2.208575346286265,\n        \"max\": 3.1345764897590516,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          2.208575346286265,\n          3.122896718036521\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     }
   ]
 }
