--- a/КП_№4_Аль_Хмуз_БС_25_Вступ_до_ІАД.ipynb
+++ b/КП_№4_Аль_Хмуз_БС_25_Вступ_до_ІАД.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM5hw60c7iEMwlJvxTSF75x",
+      "authorship_tag": "ABX9TyNG0fPJ2ZwW2pGABw6HoGkI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -573,6 +573,86 @@
       },
       "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Внутрішньокластерна відстань"
+      ],
+      "metadata": {
+        "id": "tpDT_oFS6l0i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.cluster.hierarchy import fcluster\n",
+        "from scipy.spatial.distance import squareform\n",
+        "\n",
+        "# Збережемо відстані для 2–10 кластерів\n",
+        "internal_distances = []\n",
+        "\n",
+        "# Обчислюємо внутрішньокластерні відстані для 2-10 кластерів\n",
+        "for num_clusters in range(2, 11):\n",
+        "    clusters = fcluster(linkage_matrix, num_clusters, criterion='maxclust')\n",
+        "    distance_matrix = squareform(pdist(normalized_data))\n",
+        "\n",
+        "    # Обчислюємо суму відстаней всередині кожного кластера\n",
+        "    total_internal_distance = 0\n",
+        "    for cluster in np.unique(clusters):\n",
+        "        cluster_points = normalized_data[clusters == cluster]\n",
+        "        if len(cluster_points) > 1:  # Щоб уникнути помилок для кластерів з 1 об'єктом\n",
+        "            total_internal_distance += np.sum(distance_matrix[np.ix_(clusters == cluster, clusters == cluster)])\n",
+        "\n",
+        "    internal_distances.append(total_internal_distance)\n",
+        "\n",
+        "# Виведемо результати на екран\n",
+        "for num_clusters, distance in zip(range(2, 11), internal_distances):\n",
+        "    print(f\"Внутрішньокластерна відстань для {num_clusters} кластерів: {distance:.4f}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MWZ0d7o258q2",
+        "outputId": "4f1a2820-55ff-4cbc-eabe-4f3dd486eecd"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Внутрішньокластерна відстань для 2 кластерів: 920.2985\n",
+            "Внутрішньокластерна відстань для 3 кластерів: 545.8267\n",
+            "Внутрішньокластерна відстань для 4 кластерів: 265.3262\n",
+            "Внутрішньокластерна відстань для 5 кластерів: 203.8537\n",
+            "Внутрішньокластерна відстань для 6 кластерів: 145.1834\n",
+            "Внутрішньокластерна відстань для 7 кластерів: 110.1981\n",
+            "Внутрішньокластерна відстань для 8 кластерів: 99.7194\n",
+            "Внутрішньокластерна відстань для 9 кластерів: 71.5609\n",
+            "Внутрішньокластерна відстань для 10 кластерів: 59.1449\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Внутрішньокластерна відстань зменшується з ростом кількості кластерів, що свідчить про підвищення схожості об'єктів всередині кластерів. Це покращує якість кластеризації, адже менші відстані вказують на тісніше згуртування.\n",
+        "\n",
+        "При переході від 2 до 10 кластерів спостерігається значне зменшення відстані, що підтверджує, що більша кількість кластерів краще відображає структуру даних. Оптимальна кількість кластерів, як правило, визначається в межах, де спостерігається різке зменшення внутрішньокластерної відстані, після чого це зменшення стає менш вираженим.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "bI4KuBhT6YD2"
+      }
     },
     {
       "cell_type": "markdown",
