--- a/РР_Аль_Хмуз_БС_25_Вступ_до_ІАД.ipynb
+++ b/РР_Аль_Хмуз_БС_25_Вступ_до_ІАД.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuZsYFcpjmTYV2ezipZ0kf",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMg7Gs+xZ6shjscVvqjcDdS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +26,245 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/kurkur19/Intelligent_Data_Analysis_Al_Khmuz_BS_25/blob/main/%D0%A0%D0%A0_%D0%90%D0%BB%D1%8C_%D0%A5%D0%BC%D1%83%D0%B7_%D0%91%D0%A1_25_%D0%92%D1%81%D1%82%D1%83%D0%BF_%D0%B4%D0%BE_%D0%86%D0%90%D0%94.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Розрахункова робота: Дослідження якості кластеризації даних функціонального стану серцево-судинної системи людини\n",
+        "### Дисципліна: Вступ до Інтелектуального Аналізу Даних"
+      ],
+      "metadata": {
+        "id": "cP39RPN5CuNv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Виконала студентка групи БС-25 Аль Хмуз Карина Бассамівна\n"
+      ],
+      "metadata": {
+        "id": "7K3v3GP1DC_A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Завдання на роботу:\n",
+        "в роботі пропонується дослідити застосування  різних форм критерію роздільності для визначення оптимальної кількості кластерів в задачах аналізу функціонального стану серцево-судинної системи людини.\n",
+        "\n",
+        "У файлі «Дані після кластеризації» у вкладці «Вхідні дані» представлені дані  вимірювання   тиск-пульс при виконанні проби Мартине в групі досліджуваних: до навантаження, після виконання 20 присідань, та після періодів відпочінку."
+      ],
+      "metadata": {
+        "id": "kcFVICbyDe0d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "У наступних вкладках  представлено результати  розбиття даних методом  k-середніх  у просторі 3*6=18 координат: «систолічний тиск - діастолічний тиск –пульс» у 6 станах людини: спокій, навантаження, та через 4 періоди відпочинку (період 1 хвилина).   \n",
+        "\n",
+        "Відповідні вкладки містять розбиття об’єктів методом k-середніх на відповідно 8, 12 та 14 кластерів."
+      ],
+      "metadata": {
+        "id": "naxuo0mDDndp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Завдання 1 (обов'язкове до виконання)***\n",
+        "\n",
+        "**У роботі необхідно:**  застосувавши дані по  m змінним (в нашому випадку m=18) у K кластерах, розглядаємо варіанти K=8, K=12 (реально -10) та K=14 (реально -13) кластерів при наявності nq  об’єктів (q=1,...K )  у кoжному кластері для визначення,  для якого варианту розбиття на кластери (К=8, К=12(10),  К=14(13)) критерії (2.23-2.28) приймають найкращі значення. Заповнити  таблицю розрахованих значень критеріїв для кожного розбиття, та зробити висновки що до найкращого варіанту розбиття на кластери.\n",
+        "\n",
+        "***Завдання 2 (підвищена оцінка)***\n",
+        "\n",
+        "**Визначення скороченого простору змінних для кластерного аналізу**\n",
+        "виконується на індивідуальному  складі простору змінних, який ви визначаєте наступним чином: трійки вимірів 1 та 2 (виміри у спокої та після навантаження) зберігаються у всіх,  до них додаєте певну кількість трійок з набору 3,4,5,6 - відповідно до вашого варіанту.  Всього таких варіантів вийде 13. У файлі з завданням перелічені варіанти згідно вашого номеру у списку групи."
+      ],
+      "metadata": {
+        "id": "RikFL5LuDrAW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##*Теоретична частина*"
+      ],
+      "metadata": {
+        "id": "gV4N6EhgD1H7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Кластеризація**, або **кластерний аналіз** — це статистична процедура,\n",
+        "задача якої полягає в розбитті вибірки об'єктів на підмножини, що не\n",
+        "перетинаються і називаються кластерами. Кожен кластер має складається\n",
+        "зі схожих об'єктів, а об'єкти різних кластерів мають істотно відрізнятися\n",
+        "один від одного. Задача кластеризації відноситься до статистичної\n",
+        "обробки, а також до широкого класу задач навчання без вчителя. Ще її\n",
+        "можна описати через задачу класифікації.\n"
+      ],
+      "metadata": {
+        "id": "uYujqqnzEyty"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Задача кластеризації** — це по факту задача класифікації, бо в обох\n",
+        "випадках ми ділимо об'єкти на основі їх подібності між собою, але у\n",
+        "випадку кластеризації приналежність навчальних об'єктів будь-яким\n",
+        "класам не задається. Така задача — загальна, тому для її розв'язання\n",
+        "використовуються різні підходи. Алгоритми побудови кластерів можуть\n",
+        "дуже відрізнятися у підходах до того, що відносити в один кластер і як їх\n",
+        "взагалі ефективніше шукати. Кластери можна утворювати ґрунтуючись на\n",
+        "відстані між ними, на щільності ділянок у просторі даних, інтервалах або\n",
+        "на конкретних статистичних розподілах. Це все залежать від конкретного\n",
+        "набору даних та мети використання результатів. Кластерний аналіз не є\n",
+        "автоматизованим, це скоріше ітераційний процес, тому що часто\n",
+        "доводиться змінювати метод опрацювання даних та параметри моделі,\n",
+        "поки не буде отримано з результат з заданими властивостями"
+      ],
+      "metadata": {
+        "id": "e5yARcX-E_pj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Алгоритм K-середніх** (K-means) є одним із найпоширеніших методів кластеризації. Основні етапи роботи алгоритму:\n",
+        " 1. Вибір кількості кластерів 𝐾.\n",
+        " 2. Встановлення початкових центрів кластерів (випадковий вибір або зf правилами).\n",
+        " 3. Розподіл об'єктів донайближчого центру.\n",
+        " 4. Перерахунок центрів кластерів.\n",
+        " 5. Повторення кроків 3–4 до досягнення збіжності.\n",
+        "\n",
+        "Мета алгоритму — мінімізувати суму квадратів відстаней між об'єктами та центрами їх кластерів."
+      ],
+      "metadata": {
+        "id": "oFE3-UnfFFIK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Критерії оцінки якості кластеризації (формули 2.23-2.28)"
+      ],
+      "metadata": {
+        "id": "yDXS3MEPEX7C"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####1. Внутрішньокластерна дисперсія ($W_k$)\n",
+        "\n",
+        "Внутрішньокластерна дисперсія вимірює щільність об'єктів у кластері:\n",
+        "\n",
+        "\n",
+        "$W_k = \\sum_{q=1}^K \\sum_{x \\in C_q} \\|x - \\mu_q\\|^2,$\n",
+        "\n",
+        "де:\n",
+        "- $x$ — об'єкти в кластері $C_q$;\n",
+        "- $\\mu_q$ — центр кластера $q$.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "_EuWL74_EbZN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####2. Міжкластерна дисперсія ($B_k$)\n",
+        "\n",
+        "Міжкластерна дисперсія показує відстань між кластерами:\n",
+        "\n",
+        "$B_k = \\sum_{q=1}^K n_q \\cdot \\|\\mu_q - \\mu\\|^2,$\n",
+        "\n",
+        "де:\n",
+        "- $n_q$ — кількість об'єктів у кластері $q$;\n",
+        "- $\\mu$ — середнє значення всіх даних.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "OaIuV3-bEe_0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####3. Критерій силуету ($S_k$)\n",
+        "\n",
+        "Силует визначає, наскільки добре об'єкт належить своєму кластеру в порівнянні з іншими:\n",
+        "\n",
+        "$S_k = \\frac{b - a}{\\max(a, b)}$,\n",
+        "\n",
+        "\n",
+        "  де:\n",
+        "  - $a$ — середня відстань до об'єктів у своєму кластері;\n",
+        "  - $b$ — середня відстань до об'єктів у найближчому іншому кластері.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "slVlFOQpEhQM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####4. Загальна оцінка ($J_k$)\n",
+        "\n",
+        "Оцінка якості кластеризації:\n",
+        "$J_k = W_k + B_k.$\n"
+      ],
+      "metadata": {
+        "id": "0WGs6CPBEkLj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Додаткові формули\n",
+        "$\n",
+        "\\min_{K, x_i \\in X_j} \\frac{1}{K} \\sum_{q=1}^K \\frac{1}{n_q} \\sum_{i=1}^{n_q} \\sum_{p=1}^{18} \\left( x_{ip} - \\bar{x}_p^q \\right)^2\n",
+        "\\Bigg/\n",
+        "\\left(\n",
+        "\\frac{1}{C_K^2} \\sum_{i=1}^K \\sum_{j=i+1}^K \\sum_{p=1}^{18} \\left( \\bar{x}_p^i - \\bar{x}_p^j \\right)^2\n",
+        "\\right)\n",
+        "$\n",
+        "$\n",
+        "\\min_{K, x_i \\in X_j} \\frac{1}{K} \\sum_{q=1}^K \\frac{1}{n_q} \\sum_{i=1}^{n_q}\n",
+        "\\sqrt{\\sum_{p=1}^{18} \\left( x_{ip} - \\bar{x}_p^q \\right)^2}\n",
+        "\\Bigg/\n",
+        "\\left(\n",
+        "\\frac{1}{C_K^2} \\sum_{i=1}^K \\sum_{j=i+1}^K\n",
+        "\\sqrt{\\sum_{p=1}^{18} \\left( \\bar{x}_p^i - \\bar{x}_p^j \\right)^2}\n",
+        "\\right)\n",
+        "$\n",
+        "\n",
+        "Пояснення:\n",
+        "\n",
+        "- $K$ — кількість кластерів.\n",
+        "- $n_q$ — кількість об'єктів у кластері $q$.\n",
+        "- $x_{ip}$ — координата об'єкта $i$ у $p$-му вимірі.\n",
+        "- $\\overline{x}_{p}^q$ — середнє значення координати $p$ у кластері $q$.\n",
+        "- $C_K^2$ — комбінаційна кількість пар кластерів, обчислюється за формулою:\n",
+        "$C_K^2 = \\frac{K(K-1)}{2}.$"
+      ],
+      "metadata": {
+        "id": "KwgJVpBEEnhm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##*Практична частина*"
+      ],
+      "metadata": {
+        "id": "4SEUvTxGFLrP"
+      }
     },
     {
       "cell_type": "code",
