--- a/РР_Аль_Хмуз_БС_25_Вступ_до_ІАД.ipynb
+++ b/РР_Аль_Хмуз_БС_25_Вступ_до_ІАД.ipynb
@@ -307,11 +307,11 @@
         "    print(f\"Помилка при завантаженні даних: {e}\")"
       ],
       "metadata": {
-        "id": "0G4CjVEyWezf",
-        "outputId": "c4d3057c-a628-4beb-b2ea-dbc26facceed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0G4CjVEyWezf",
+        "outputId": "c4d3057c-a628-4beb-b2ea-dbc26facceed"
       },
       "execution_count": 18,
       "outputs": [
@@ -341,12 +341,12 @@
         "display(clusters_14.head())"
       ],
       "metadata": {
-        "id": "OtqdW9SVZ8HM",
-        "outputId": "f957f993-0344-42d9-cf88-8c2be41f5f99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "OtqdW9SVZ8HM",
+        "outputId": "f957f993-0344-42d9-cf88-8c2be41f5f99"
       },
       "execution_count": 20,
       "outputs": [
@@ -2082,11 +2082,11 @@
         "print(clusters_14.isnull().sum())"
       ],
       "metadata": {
-        "id": "UY7zpe9OhL2j",
-        "outputId": "fd499016-52ef-4dea-a82d-5b75e3a59c13",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UY7zpe9OhL2j",
+        "outputId": "fd499016-52ef-4dea-a82d-5b75e3a59c13"
       },
       "execution_count": 21,
       "outputs": [
@@ -2243,12 +2243,12 @@
         "display(clusters_14.describe())"
       ],
       "metadata": {
-        "id": "x9pCYBzLhNyX",
-        "outputId": "a5582fa5-cf5c-422d-87b0-730c3bb602e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "x9pCYBzLhNyX",
+        "outputId": "a5582fa5-cf5c-422d-87b0-730c3bb602e5"
       },
       "execution_count": 22,
       "outputs": [
@@ -4423,37 +4423,37 @@
         "  .highlight_min(subset=[\"Внутрішньокластерна дисперсія\"], color='#FF69B4'))"
       ],
       "metadata": {
-        "id": "0Q7WeF1sjLkP",
-        "outputId": "7e8df054-560b-4a02-d3f0-1fde53d597ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 160
-        }
+        },
+        "id": "0Q7WeF1sjLkP",
+        "outputId": "a52c25a5-7ce1-4525-f139-02f260f35f66"
       },
-      "execution_count": 34,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<pandas.io.formats.style.Styler at 0x7ea540bb5b70>"
+              "<pandas.io.formats.style.Styler at 0x7ea54067a050>"
             ],
             "text/html": [
               "<style type=\"text/css\">\n",
-              "#T_ee1ce_row0_col0, #T_ee1ce_row0_col1, #T_ee1ce_row0_col2, #T_ee1ce_row0_col4, #T_ee1ce_row1_col0, #T_ee1ce_row1_col1, #T_ee1ce_row1_col2, #T_ee1ce_row1_col3, #T_ee1ce_row1_col4, #T_ee1ce_row2_col0, #T_ee1ce_row2_col3, #T_ee1ce_row2_col4 {\n",
+              "#T_32f1a_row0_col0, #T_32f1a_row0_col1, #T_32f1a_row0_col2, #T_32f1a_row0_col4, #T_32f1a_row1_col0, #T_32f1a_row1_col1, #T_32f1a_row1_col2, #T_32f1a_row1_col3, #T_32f1a_row1_col4, #T_32f1a_row2_col0, #T_32f1a_row2_col3, #T_32f1a_row2_col4 {\n",
               "  background-color: #f9f9f9;\n",
               "  color: black;\n",
               "  border-color: black;\n",
               "  text-align: center;\n",
               "}\n",
-              "#T_ee1ce_row0_col3, #T_ee1ce_row2_col2 {\n",
+              "#T_32f1a_row0_col3, #T_32f1a_row2_col2 {\n",
               "  background-color: #f9f9f9;\n",
               "  color: black;\n",
               "  border-color: black;\n",
               "  text-align: center;\n",
               "  background-color: #00FF00;\n",
               "}\n",
-              "#T_ee1ce_row2_col1 {\n",
+              "#T_32f1a_row2_col1 {\n",
               "  background-color: #f9f9f9;\n",
               "  color: black;\n",
               "  border-color: black;\n",
@@ -4461,41 +4461,41 @@
               "  background-color: #FF69B4;\n",
               "}\n",
               "</style>\n",
-              "<table id=\"T_ee1ce\" class=\"dataframe\">\n",
+              "<table id=\"T_32f1a\" class=\"dataframe\">\n",
               "  <thead>\n",
               "    <tr>\n",
               "      <th class=\"blank level0\" >&nbsp;</th>\n",
-              "      <th id=\"T_ee1ce_level0_col0\" class=\"col_heading level0 col0\" >Кількість кластерів</th>\n",
-              "      <th id=\"T_ee1ce_level0_col1\" class=\"col_heading level0 col1\" >Внутрішньокластерна дисперсія</th>\n",
-              "      <th id=\"T_ee1ce_level0_col2\" class=\"col_heading level0 col2\" >Міжкластерна дисперсія</th>\n",
-              "      <th id=\"T_ee1ce_level0_col3\" class=\"col_heading level0 col3\" >Критерій силуету</th>\n",
-              "      <th id=\"T_ee1ce_level0_col4\" class=\"col_heading level0 col4\" >Загальна оцінка</th>\n",
+              "      <th id=\"T_32f1a_level0_col0\" class=\"col_heading level0 col0\" >Кількість кластерів</th>\n",
+              "      <th id=\"T_32f1a_level0_col1\" class=\"col_heading level0 col1\" >Внутрішньокластерна дисперсія</th>\n",
+              "      <th id=\"T_32f1a_level0_col2\" class=\"col_heading level0 col2\" >Міжкластерна дисперсія</th>\n",
+              "      <th id=\"T_32f1a_level0_col3\" class=\"col_heading level0 col3\" >Критерій силуету</th>\n",
+              "      <th id=\"T_32f1a_level0_col4\" class=\"col_heading level0 col4\" >Загальна оцінка</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th id=\"T_ee1ce_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-              "      <td id=\"T_ee1ce_row0_col0\" class=\"data row0 col0\" >Cl8_APHR</td>\n",
-              "      <td id=\"T_ee1ce_row0_col1\" class=\"data row0 col1\" >111529263.840000</td>\n",
-              "      <td id=\"T_ee1ce_row0_col2\" class=\"data row0 col2\" >5210759.030000</td>\n",
-              "      <td id=\"T_ee1ce_row0_col3\" class=\"data row0 col3\" >-0.120000</td>\n",
-              "      <td id=\"T_ee1ce_row0_col4\" class=\"data row0 col4\" >116740022.870000</td>\n",
+              "      <th id=\"T_32f1a_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_32f1a_row0_col0\" class=\"data row0 col0\" >Cl8_APHR</td>\n",
+              "      <td id=\"T_32f1a_row0_col1\" class=\"data row0 col1\" >111529263.840000</td>\n",
+              "      <td id=\"T_32f1a_row0_col2\" class=\"data row0 col2\" >5210759.030000</td>\n",
+              "      <td id=\"T_32f1a_row0_col3\" class=\"data row0 col3\" >-0.120000</td>\n",
+              "      <td id=\"T_32f1a_row0_col4\" class=\"data row0 col4\" >116740022.870000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th id=\"T_ee1ce_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-              "      <td id=\"T_ee1ce_row1_col0\" class=\"data row1 col0\" >Cl12_APHR</td>\n",
-              "      <td id=\"T_ee1ce_row1_col1\" class=\"data row1 col1\" >111281395.860000</td>\n",
-              "      <td id=\"T_ee1ce_row1_col2\" class=\"data row1 col2\" >5458627.010000</td>\n",
-              "      <td id=\"T_ee1ce_row1_col3\" class=\"data row1 col3\" >-0.360000</td>\n",
-              "      <td id=\"T_ee1ce_row1_col4\" class=\"data row1 col4\" >116740022.870000</td>\n",
+              "      <th id=\"T_32f1a_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+              "      <td id=\"T_32f1a_row1_col0\" class=\"data row1 col0\" >Cl12_APHR</td>\n",
+              "      <td id=\"T_32f1a_row1_col1\" class=\"data row1 col1\" >111281395.860000</td>\n",
+              "      <td id=\"T_32f1a_row1_col2\" class=\"data row1 col2\" >5458627.010000</td>\n",
+              "      <td id=\"T_32f1a_row1_col3\" class=\"data row1 col3\" >-0.360000</td>\n",
+              "      <td id=\"T_32f1a_row1_col4\" class=\"data row1 col4\" >116740022.870000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th id=\"T_ee1ce_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-              "      <td id=\"T_ee1ce_row2_col0\" class=\"data row2 col0\" >Cl14_APHR</td>\n",
-              "      <td id=\"T_ee1ce_row2_col1\" class=\"data row2 col1\" >108892512.160000</td>\n",
-              "      <td id=\"T_ee1ce_row2_col2\" class=\"data row2 col2\" >7847510.710000</td>\n",
-              "      <td id=\"T_ee1ce_row2_col3\" class=\"data row2 col3\" >-0.300000</td>\n",
-              "      <td id=\"T_ee1ce_row2_col4\" class=\"data row2 col4\" >116740022.870000</td>\n",
+              "      <th id=\"T_32f1a_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+              "      <td id=\"T_32f1a_row2_col0\" class=\"data row2 col0\" >Cl14_APHR</td>\n",
+              "      <td id=\"T_32f1a_row2_col1\" class=\"data row2 col1\" >108892512.160000</td>\n",
+              "      <td id=\"T_32f1a_row2_col2\" class=\"data row2 col2\" >7847510.710000</td>\n",
+              "      <td id=\"T_32f1a_row2_col3\" class=\"data row2 col3\" >-0.300000</td>\n",
+              "      <td id=\"T_32f1a_row2_col4\" class=\"data row2 col4\" >116740022.870000</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n"
@@ -4651,11 +4651,11 @@
         "    print(f\"Помилка при завантаженні даних: {e}\")"
       ],
       "metadata": {
-        "id": "-z7WbvFzq9qy",
-        "outputId": "1b74b794-b22f-4c6f-a296-54ca30fc6051",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-z7WbvFzq9qy",
+        "outputId": "1b74b794-b22f-4c6f-a296-54ca30fc6051"
       },
       "execution_count": 41,
       "outputs": [
@@ -4758,12 +4758,12 @@
         "    print(criteria_df)\n"
       ],
       "metadata": {
-        "id": "zKoLQ5fvlzIR",
-        "outputId": "d9644cd1-8cb5-43ca-e486-8754287185f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 160
-        }
+        },
+        "id": "zKoLQ5fvlzIR",
+        "outputId": "d9644cd1-8cb5-43ca-e486-8754287185f9"
       },
       "execution_count": 45,
       "outputs": [
